.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qrcode-generator-service
spec:
  selector:
    app: qrcode-generator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
