.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-qrcode-generator
spec:
  rules:
    - host: qrcode.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qrcode-generator-service
                port:
                  number: 80
